 * Added refresh cassandra schema cache to CassandraSQLContext (SPARKC-234)

1.2.5
 * Changed default query timeout from 12 seconds to 2 minutes (SPARKC-220)
 * spark.cassandra.output.throughput_mb_per_sec can now be set to a decimal (SPARKC-226)
 * Fixed Connection Caching, Changed SSL EnabledAlgorithms to Set (SPARKC-227)

1.2.4
 * Cassandra native count is performed by `cassandraCount` method (SPARKC-215)
 * Add a configurable delay between subsequent query retries (SPARKC-221)

1.2.3
 * Support for connection compressions configuration (SPARKC-124)
 * Support for connection encryption configuration (SPARKC-118)
 * Fix a bug to support upper case characters in UDT (SPARKC-201)
 * Meaningful exception if some partition key column is null (SPARKC-198)
 * Improved reliability of thread-leak test (SPARKC-205)

1.2.2
 * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
 * Enabled Java API artifact generation for Scala 2.11.x (SPARKC-130)
 * Fixed a bug preventing a custom type converter from being used
   when saving data. RowWriter implementations must
   perform type conversions now. (SPARKC-157)

1.2.1
 * Fixed problems with mixed case keyspaces in ReplicaMapper (SPARKC-159)

1.2.0
 * Removed conversion method rom WriteOption which accepted object of Duration type
   from Spark Streaming (SPARKC-106)
 * Fixed compilation warnings (SPARKC-76)
 * Fixed ScalaDoc warnings (SPARKC-119)
 * Synchronized TypeTag access in various places (SPARKC-123)
 * Adds both hostname and hostaddress as partition preferredLocations (SPARKC-126)

1.2.0 RC 3
 * Select aliases are no longer ignored in CassandraRow objects (SPARKC-109)
 * Fix picking up username and password from SparkConf (SPARKC-108)
 * Fix creating CassandraConnectorSource in the executor environment (SPARKC-111)

1.2.0 RC 2
 * Cross cluster table join and write for Spark SQL (SPARKC-73)
 * Enabling / disabling metrics in metrics configuration file and other metrics fixes (SPARKC-91)